--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>qr code</title>
-  <script src="./node_modules/html5-qrcode/html5-qrcode.min.js"></script>
+  <script src="./html5-qrcode.min.js"></script>
 
 
   <style>
